# agentic-security-demo

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
clients/: agent_budget_burst.py  ap2-payment.py  ap2-replay.py  ap2_payment.py  ap2_replay.py  claude-code-like.py  claude_code_like.py  mcp-tool-call.py  mcp_tool_call.py  signed_bot.py  unsigned-scraper.py  unsigned_scraper.py
docs/: WALKTHROUGH.md  walkthrough.cast
docs/scenarios/: 01-agent-detection.md  02-web-bot-auth.md  03-ap2-mandate.md  04-agent-budget.md  05-prompt-linked-audit.md  06-trust-tier.md
mock-origin/: Dockerfile  server.py
sbproxy-config/: baseline.adrf.yaml  sb.yml
sbproxy-image/: Dockerfile
scripts/: observe.sh  reset.sh  verify.sh  walkthrough.sh
